[gd_scene load_steps=4 format=3 uid="uid://ci0jmudc5x78s"]

[ext_resource type="Script" uid="uid://c8scr01y6mpj3" path="res://CustomModules/PauseScreen/Scripts/pause_screen.gd" id="1_1och7"]
[ext_resource type="Script" uid="uid://bl1kqr0pawq37" path="res://CustomModules/PauseScreen/Scripts/volume_controller.gd" id="2_bpi0q"]
[ext_resource type="Theme" uid="uid://dujori2qpgkmw" path="res://Art/UI_Themes/Menu.tres" id="3_vmyb1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 10
visible = false
script = ExtResource("1_1och7")

[node name="background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2509804)

[node name="PauseScreen" type="Control" parent="."]
z_index = 200
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.5, 0.5)
script = ExtResource("2_bpi0q")

[node name="Label" type="Label" parent="PauseScreen"]
layout_mode = 0
offset_top = 64.0
offset_right = 1920.0
offset_bottom = 150.0
theme = ExtResource("3_vmyb1")
theme_override_font_sizes/font_size = 141
text = "Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen"]
layout_mode = 0
offset_left = 460.0
offset_top = 300.0
offset_right = 1460.0
offset_bottom = 1004.0
theme = ExtResource("3_vmyb1")
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_vmyb1")
text = "Resume"

[node name="Gap" type="Label" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 15

[node name="Music" type="Label" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_vmyb1")
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_vmyb1")
value = 5.0

[node name="Sounds" type="Label" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_vmyb1")
text = "Sounds"
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="PauseScreen/VBoxContainer"]
layout_mode = 2

[node name="Gap2" type="Label" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[node name="Button" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_vmyb1")
text = "Exit to Main Menu"

[connection signal="pressed" from="PauseScreen/VBoxContainer/ResumeButton" to="." method="toggle_pause"]
[connection signal="value_changed" from="PauseScreen/VBoxContainer/MusicSlider" to="PauseScreen" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PauseScreen/VBoxContainer/SoundSlider" to="PauseScreen" method="_on_sound_slider_value_changed"]
